<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:title="@string/generalMeans">
            <menu>
                <item
                    android:id="@+id/id_fish"
                    android:icon="@drawable/ic_fish_main_menu"
                    android:title="@string/fish" />
                <item
                    android:id="@+id/id_na"
                    android:icon="@drawable/ic_fishingsign_sna"
                    android:title="@string/na" />
                <item
                    android:id="@+id/id_sna"
                    android:icon="@drawable/ic_fishing_ydochka"
                    android:title="@string/sna" />
            </menu>
        </item>

        <item android:title="@string/differentMeans">
            <menu>
                <item
                    android:id="@+id/id_history"
                    android:icon="@drawable/ic_history"
                    android:title="@string/history" />
                <item
                    android:id="@+id/id_info"
                    android:icon="@drawable/ic_baseline_handyman_24"
                    android:title="@string/aboutProgram" />
            </menu>
        </item>


    </group>
</menu>